# life

./: CMakeLists.txt  README.md
src/: BigInt.cpp  BigInt.h  Grid.cpp  Grid.h  WindowViewController.h  main.cpp
